--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParamAffichage.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParamAffichage.fxml
@@ -2,17 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <top>
@@ -28,13 +27,13 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-               <children>
+            <ButtonBar buttonOrder="U+L_HE+FBIX_NCYOA_R" prefHeight="40.0" prefWidth="200.0">
+              <buttons>
                 <Button fx:id="btnAffichage" mnemonicParsing="false" style="-fx-background-color: darkkhaki;" text="Affichage" />
                   <Button fx:id="btnAudio" mnemonicParsing="false" onAction="#handleParamAudio" text="Audio" />
-                  <Button fx:id="btnPref" cache="true" mnemonicParsing="false" onAction="#handleParamPref" text="Préférences" />
-               </children>
-            </HBox>
+                  <Button fx:id="btnPref" cache="true" mnemonicParsing="false" text="Préférences" />
+              </buttons>
+            </ButtonBar>
             <Separator prefHeight="1.0" prefWidth="600.0" style="-fx-background-color: black;" />
          </children>
       </VBox>
@@ -50,7 +49,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <RadioButton mnemonicParsing="false" selected="true" text="Clair">
+            <RadioButton fx:id="radioClair" mnemonicParsing="false" onAction="#handleTheme" selected="true" text="Clair">
                <toggleGroup>
                   <ToggleGroup fx:id="theme" />
                </toggleGroup>
@@ -58,7 +57,7 @@
                   <Insets left="150.0" top="5.0" />
                </VBox.margin>
             </RadioButton>
-            <RadioButton mnemonicParsing="false" text="Sombre" toggleGroup="$theme">
+            <RadioButton fx:id="radioSombre" mnemonicParsing="false" onAction="#handleTheme" text="Sombre" toggleGroup="$theme">
                <VBox.margin>
                   <Insets left="150.0" top="5.0" />
                </VBox.margin>
@@ -71,7 +70,7 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <ColorPicker>
+            <ColorPicker fx:id="selecCouleur" onAction="#handleCouleur">
                <value>
                   <Color red="0.5803921818733215" green="0.5058823823928833" blue="0.16862745583057404" />
                </value>
@@ -83,10 +82,14 @@
       </VBox>
    </center>
    <bottom>
-      <Button fx:id="btnAppliquer" mnemonicParsing="false" onAction="#handleAppliquer" prefWidth="81.0" text="Appliquer" BorderPane.alignment="CENTER">
+      <ButtonBar buttonOrder="U+L_HE+FBIX_NCYOA_R" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button fx:id="btnAppliquer" mnemonicParsing="false" onAction="#handleAppliquer" prefWidth="81.0" text="Appliquer" />
+          <Button fx:id="btnRetour" mnemonicParsing="false" onAction="#handleRetour" text="Retour" />
+        </buttons>
          <BorderPane.margin>
             <Insets bottom="50.0" />
          </BorderPane.margin>
-      </Button>
+      </ButtonBar>
    </bottom>
 </BorderPane>
