--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParamPref.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageParamPref.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -23,13 +23,13 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-               <children>
+            <ButtonBar buttonOrder="U+L_HE+FBIX_NCYOA_R" prefHeight="40.0" prefWidth="200.0">
+              <buttons>
                 <Button fx:id="btnAffichage" mnemonicParsing="false" onAction="#handleParamAffichage" text="Affichage" />
                   <Button fx:id="btnAudio" mnemonicParsing="false" onAction="#handleParamAudio" text="Audio" />
                   <Button fx:id="btnPref" cache="true" mnemonicParsing="false" onAction="#handleParamPref" style="-fx-background-color: darkkhaki;" text="Préférences" />
-               </children>
-            </HBox>
+              </buttons>
+            </ButtonBar>
             <Separator prefHeight="1.0" prefWidth="600.0" style="-fx-background-color: black;" />
          </children>
       </VBox>
@@ -38,10 +38,14 @@
       <VBox prefHeight="349.0" prefWidth="554.0" BorderPane.alignment="CENTER" />
    </center>
    <bottom>
-      <Button fx:id="btnAppliquer" mnemonicParsing="false" onAction="#handleAppliquer" prefWidth="81.0" text="Appliquer" BorderPane.alignment="CENTER">
+      <ButtonBar buttonOrder="U+L_HE+FBIX_NCYOA_R" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button fx:id="btnAppliquer" mnemonicParsing="false" onAction="#handleAppliquer" prefWidth="81.0" text="Appliquer" />
+          <Button fx:id="btnRetour" mnemonicParsing="false" onAction="#handleRetour" text="Retour" />
+        </buttons>
          <BorderPane.margin>
             <Insets bottom="50.0" />
          </BorderPane.margin>
-      </Button>
+      </ButtonBar>
    </bottom>
 </BorderPane>
