--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PagePays.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PagePays.fxml
@@ -127,7 +127,7 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane fx:id="scrollPays" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+            <ScrollPane fx:id="scrollPays" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS" VBox.vgrow="ALWAYS">
                <content>
                   <GridPane fx:id="classementPays" alignment="CENTER" gridLinesVisible="true">
                     <columnConstraints>
