--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetitionClassement.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetitionClassement.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,9 +16,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="classement" prefHeight="45.0" prefWidth="289.0" text="Classement Compétitions">
                <VBox.margin>
@@ -28,30 +28,38 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <GridPane gridLinesVisible="true">
-              <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="69.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="225.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="206.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="115.0" minWidth="10.0" prefWidth="86.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label contentDisplay="CENTER" text="position" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="nom" GridPane.columnIndex="1" />
-                  <Label text="pays" GridPane.columnIndex="2" />
-                  <Label text="score/points" GridPane.columnIndex="3" />
-               </children>
-            </GridPane>
-            <Button fx:id="moins" mnemonicParsing="false" onAction="#handleCompetition" text="moins">
+            <ScrollPane fx:id="classementCompet" prefHeight="280.0" prefWidth="860.0">
+               <content>
+                  <GridPane prefHeight="117.0" prefWidth="843.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="50.0" prefWidth="113.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="633.0" minWidth="439.0" prefWidth="576.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="151.0" minWidth="0.0" prefWidth="151.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Position" />
+                        <Label text="Nom" GridPane.columnIndex="1" />
+                        <Label text="Pays" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets right="20.0" />
+                           </GridPane.margin>
+                        </Label>
+                     </children>
+                  </GridPane>
+               </content>
                <VBox.margin>
-                  <Insets left="500.0" />
+                  <Insets bottom="30.0" left="20.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </ScrollPane>
+            <Button fx:id="moins" mnemonicParsing="false" onAction="#handleCompetition" prefHeight="24.0" prefWidth="72.0" text="moins">
+               <VBox.margin>
+                  <Insets left="800.0" />
                </VBox.margin>
             </Button>
          </children>
@@ -113,20 +121,4 @@
          </children>
       </VBox>
    </top>
-   <left>
-      <HBox prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox prefHeight="400.0" prefWidth="200.0">
-               <children>
-                  <ComboBox fx:id="menuCompetHomme" prefHeight="24.0" prefWidth="200.0" promptText="Homme" />
-                  <ComboBox fx:id="menuCompetFemme" prefHeight="24.0" prefWidth="200.0" promptText="Femme" />
-               </children>
-               <HBox.margin>
-                  <Insets right="5.0" top="10.0" />
-               </HBox.margin>
-            </VBox>
-            <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: black;" />
-         </children>
-      </HBox>
-   </left>
 </BorderPane>
